Updated all documentation to newest release (1.2.3).

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -32,7 +32,7 @@ td { padding: 2px 5px; }
       <tbody>
         <tr>
           <td class="propName">Version</td>
-          <td>1.2.2<td>
+          <td>1.2.3-SNAPSHOT<td>
         </tr>
         <tr>
           <td class="propName">Grails Version</td>
@@ -40,16 +40,16 @@ td { padding: 2px 5px; }
         </tr>
         <tr>
           <td class="propName">Author</td>
-          <td>Lim Chee Kin</td>
+          <td>Lim Chee Kin, Brian Saville</td>
         </tr>
       </tbody>
     </table>
     <hr />
     <h2>Documentation</h2>
     <ul>
-      <li><a href="/grails-gwt/docs/manual/index.html">User guide</a></a>
-      <li><a href="/grails-gwt/docs/api/index.html">Java API</a></li>
-      <li><a href="/grails-gwt/docs/gapi/index.html">Groovy API</a></li>
+      <li><a href="/docs/guide/index.html">User guide</a></a>
+      <li><a href="/docs/api/index.html">Java API</a></li>
+      <li><a href="/docs/gapi/index.html">Groovy API</a></li>
     </ul>
     <hr />
     <div>{{ content }}</div> 
