--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -47,9 +47,9 @@ td { padding: 2px 5px; }
     <hr />
     <h2>Documentation</h2>
     <ul>
-      <li><a href="/docs/guide/index.html">User guide</a></a>
-      <li><a href="/docs/api/index.html">Java API</a></li>
-      <li><a href="/docs/gapi/index.html">Groovy API</a></li>
+      <li><a href="docs/guide/index.html">User Guide</a></a>
+      <li><a href="docs/api/index.html">Java API</a></li>
+      <li><a href="docs/gapi/index.html">Groovy API</a></li>
     </ul>
     <hr />
     <div>{{ content }}</div> 
